clusters/common/apps/argocd/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    item.homer.rajsingh.info/name: "ArgoCD"
    item.homer.rajsingh.info/subtitle: "GitOps Deployment"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/argo-cd.png"
    item.homer.rajsingh.info/keywords: "gitops, kubernetes, deployment"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "argocd.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argo-cd-argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
